fix the array out of boundry error

--- a/main.css
+++ b/main.css
@@ -57,11 +57,11 @@ body {
   flex-direction: row;
 }
 .main-grid .grid-col {
-  height: 30px;
-  width: 30px;
+  height: 50px;
+  width: 50px;
   border: 1px dotted #02021e;
   background: #022e0c;
-  outline-color: #6bcf1b;
+  outline-color: #6ae10c;
 }
 
 /* model  */
@@ -116,6 +116,7 @@ body {
   color: #0c0c0c;
   font-size: 18px;
   cursor: pointer;
+  outline-style: none;
 }
 .refresh:hover {
   background: #0c0c0c;
